@@ -1,3 +1,8 @@
+2005-03-22  Guilhem Lavaux  <guilhem@kaffe.org>,
+	    Dalibor Topic  <robilad@kaffe.org>
+
+	* config/arm/common.h: Disabled atomicity.h
+
 2005-03-22  Guilhem Lavaux  <guilhem@kaffe.org>
 
 	* config/config.h.in, configure: Regenerated.
